[project]
name = "jbank"
version = "0.1.0"
description = "Joint Bank Tracking Application"
requires-python = ">=3.13"
dependencies = [
    "reflex",
    "reflex-google-auth",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pylint",
    "bandit",
    "pytest",
    "pytest-cov",
    "mypy",
]

[tool.black]
line-length = 120
target-version = ['py313']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
mypy_path = "jbank"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jbank"]
